--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "application-name",
+  "name": "node-wiki",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "nodemon --harmony app.js -w lib -w models -w routes"
   },
   "dependencies": {
     "express": "3.0.x",
     "jade": "*",
     "mongoose": "3.5.x",
-    "express-mongoose": "0.1.x"
+    "express-mongoose": "0.1.x",
+    "async" : "*"
   }
 }
