--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "node-wiki",
-    "description": "HTML5 editor powered wiki with drag and drop file upload and easy page creation",
-    "version": "0.0.1",
-    "scripts": {
-        "start": "nodemon -w lib -w models -w routes app.js"
-    },
-    "dependencies": {
-        "express": "3.0.x",
-        "jade": "*",
-        "mongoose": "3.5.x",
-        "express-mongoose": "0.1.x",
-        "async" : "*"
-    },
-    "devDependencies" : {
-        "livereload" : "*"
-    }
+  "name": "node-wiki",
+  "description": "HTML5 editor powered wiki with drag and drop file upload and easy page creation",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "nodemon -w lib -w models -w routes app.js"
+  },
+  "dependencies": {
+    "express": "3.0.x",
+    "jade": "*",
+    "mongoose": "3.5.x",
+    "express-mongoose": "0.1.x",
+    "async": "*",
+    "mkdirp": "0.3.x"
+  },
+  "devDependencies": {
+    "livereload": "*"
+  }
 }
