--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
     "name": "node-wiki",
     "description": "HTML5 editor powered wiki with drag and drop file upload and easy page creation",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "scripts": {
         "start": "nodemon -w lib -w models -w routes app.js"
     },
+    "repository": {
+        "type": "git"
+        , "url": "https://github.com/thomaspeklak/node-wiki"
+    },
     "dependencies": {
-        "express": "3.0.x",
+        "express": "3.2.x",
         "jade": "*",
         "mongoose": "3.6.x",
         "express-mongoose": "0.1.x",
         "async": "*",
         "mkdirp": "0.3.x",
-        "request" : "2.12.x",
-        "validator" : "0.4.x",
+        "request" : "2.2.x",
+        "validator" : "1.1.x",
         "mongoose-version": "0.2.x"
     },
     "devDependencies": {
