--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "mkdirp": "0.3.x",
         "request" : "2.2.x",
         "validator" : "1.1.x",
-        "mongoose-version": "0.2.x"
+        "mongoose-version": "0.2.x",
+        "i18n-2": "0.4.x"
     },
     "devDependencies": {
         "livereload": "*"
