--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "validator": "1.1.x",
     "mongoose-version": "0.2.x",
     "i18n-2": "0.4.x",
-    "mongoose-text-search": "0.0.2"
+    "mongoose-text-search": "0.0.2",
+    "semver": "~1.1.4"
   },
   "devDependencies": {
     "livereload": "*"
