--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "livereload": "*",
     "mocha": "~1.10.0",
     "supertest": "~0.6.0",
-    "should": "~1.2.2"
+    "chai": "~1.6.0"
   },
   "license": "MIT"
 }
