--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mongoose-text-search": "0.0.2",
     "semver": "~1.1.4",
     "browserify": "~2.17.3",
-    "handlebars-runtime": "~1.0.1",
+    "handlebars-runtime": "git://github.com/dadah89/node-handlebars-runtime.git",
     "hbsfy": "~0.1.2"
   },
   "devDependencies": {
