--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "semver": "~1.1.4",
     "browserify": "~2.17.3",
     "handlebars-runtime": "git://github.com/dadah89/node-handlebars-runtime.git",
-    "hbsfy": "~0.1.2"
+    "hbsfy": "~0.1.2",
+    "markdown": "~0.4.0"
   },
   "devDependencies": {
     "livereload": "*",
