--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "mongoose-text-search": "0.0.2",
     "semver": "~1.1.4",
     "browserify": "~2.17.3",
-    "handlebars-runtime": "git://github.com/dadah89/node-handlebars-runtime.git",
     "hbsfy": "~0.1.2",
     "markdown": "~0.4.0"
   },
@@ -33,7 +32,8 @@
     "mocha": "~1.10.0",
     "supertest": "~0.7.0",
     "chai": "~1.6.0",
-    "watchify": "0.0.1"
+    "watchify": "0.0.1",
+    "handlebars-runtime": "~1.0.12"
   },
   "license": "MIT"
 }
